--- a/src/AppBundle/Resources/views/home/index.html.twig
+++ b/src/AppBundle/Resources/views/home/index.html.twig
@@ -21,7 +21,7 @@
         <div class="slogan container container--90">
             <div class="slogan--item">
                 <h1>
-                    Zacznij pomagać!<br />
+                    Zacznij pomagać!<br/>
                     Oddaj niechciane rzeczy w zaufane ręce
                 </h1>
             </div>
@@ -33,13 +33,15 @@
             <div class="stats--item">
                 <em>10</em>
                 <h3>Oddanych worków</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius est beatae, quod accusamus illum tempora!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius est beatae, quod accusamus illum
+                    tempora!</p>
             </div>
 
             <div class="stats--item">
                 <em>5</em>
                 <h3>Wspartych organizacji</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam magnam, sint nihil cupiditate quas quam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam magnam, sint nihil cupiditate
+                    quas quam.</p>
             </div>
 
         </div>
@@ -77,10 +79,11 @@
     <section id="about-us" class="about-us">
         <div class="about-us--text">
             <h2>O nas</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas vitae animi rem pariatur incidunt libero optio esse quisquam illo omnis.</p>
-            <img src="{{ asset('assets/images/signature.svg') }}" class="about-us--text-signature" alt="Signature" />
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas vitae animi rem pariatur incidunt
+                libero optio esse quisquam illo omnis.</p>
+            <img src="{{ asset('assets/images/signature.svg') }}" class="about-us--text-signature" alt="Signature"/>
         </div>
-        <div class="about-us--image"><img src="{{ asset('assets/images/about-us.jpg') }}" alt="People in circle" /></div>
+        <div class="about-us--image"><img src="{{ asset('assets/images/about-us.jpg') }}" alt="People in circle"/></div>
     </section>
 
     <section id="help" class="help">
@@ -90,35 +93,40 @@
         <div class="help--slides active" data-id="1">
             <p>W naszej bazie znajdziesz listę zweryfikowanych Fundacji, z którymi współpracujemy.
                 Możesz sprawdzić czym się zajmują.</p>
+            <div style="border-color: red; border-style: solid; padding: 20px">
+                <ul class="help--slides-items">
+                    {{ render(controller(
+                        'AppBundle:Home:getInstitutions',
+                        {'max': 4}
+                    )) }}
+{#                    <li>#}
+{#                        <div class="col">#}
+{#                            <div class="title">Fundacja "Dbam o Zdrowie"</div>#}
+{#                            <div class="subtitle">Cel i misja: Pomoc dzieciom z ubogich rodzin.</div>#}
+{#                        </div>#}
 
-            <ul class="help--slides-items">
-                <li>
-                    <div class="col">
-                        <div class="title">Fundacja "Dbam o Zdrowie"</div>
-                        <div class="subtitle">Cel i misja: Pomoc dzieciom z ubogich rodzin.</div>
-                    </div>
+{#                        <div class="col">#}
+{#                            <div class="title">Fundacja "A kogo"</div>#}
+{#                            <div class="subtitle">Cel i misja: Pomoc wybudzaniu dzieci ze śpiączki.</div>#}
+{#                        </div>#}
+{#                    </li>#}
 
-                    <div class="col">
-                        <div class="title">Fundacja "A kogo"</div>
-                        <div class="subtitle">Cel i misja: Pomoc wybudzaniu dzieci ze śpiączki.</div>
-                    </div>
-                </li>
+{#                    <li>#}
+{#                        <div class="col">#}
+{#                            <div class="title">Fundacja “Dla dzieci"</div>#}
+{#                            <div class="subtitle">Cel i misja: Pomoc osobom znajdującym się w trudnej sytuacji#}
+{#                                życiowej.#}
+{#                            </div>#}
+{#                        </div>#}
+{#                        <div class="col">#}
+{#                            <div class="title">Fundacja “Bez domu”</div>#}
+{#                            <div class="subtitle">Cel i misja: Pomoc dla osób nie posiadających miejsca zamieszkania#}
+{#                            </div>#}
+{#                        </div>#}
 
-                <li>
-                    <div class="col">
-                        <div class="title">Fundacja “Dla dzieci"</div>
-                        <div class="subtitle">Cel i misja: Pomoc osobom znajdującym się w trudnej sytuacji życiowej.</div>
-                    </div>
-                    <div class="col">
-                        <div class="title">Fundacja “Bez domu”</div>
-                        <div class="subtitle">Cel i misja: Pomoc dla osób nie posiadających miejsca zamieszkania</div>
-                    </div>
-
-                </li>
-
-            </ul>
-
-
+{#                    </li>#}
+                </ul>
+            </div>
         </div>
 
     </section>
@@ -128,8 +136,8 @@
             <h2>Skontaktuj się z nami</h2>
             <h3>Formularz kontaktowy</h3>
             <form class="form--contact">
-                <div class="form-group form-group--50"><input type="text" name="name" placeholder="Imię" /></div>
-                <div class="form-group form-group--50"><input type="text" name="surname" placeholder="Nazwisko" /></div>
+                <div class="form-group form-group--50"><input type="text" name="name" placeholder="Imię"/></div>
+                <div class="form-group form-group--50"><input type="text" name="surname" placeholder="Nazwisko"/></div>
 
                 <div class="form-group"><textarea name="message" placeholder="Wiadomość" rows="1"></textarea></div>
 
