--- a/src/AppBundle/Resources/views/home/index.html.twig
+++ b/src/AppBundle/Resources/views/home/index.html.twig
@@ -30,19 +30,13 @@
 
     <section id="stats" class="stats">
         <div class="container container--85">
-            <div class="stats--item">
-                <em>10</em>
-                <h3>Oddanych worków</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius est beatae, quod accusamus illum
-                    tempora!</p>
-            </div>
+            {{ render(controller(
+                'AppBundle:Home:getTotalNumberOfDonationBags'
+            )) }}
 
-            <div class="stats--item">
-                <em>5</em>
-                <h3>Wspartych organizacji</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam magnam, sint nihil cupiditate
-                    quas quam.</p>
-            </div>
+            {{ render(controller(
+                'AppBundle:Home:getTotalNumberOfInstitutions'
+            )) }}
 
         </div>
     </section>
