--- a/src/AppBundle/Resources/views/donate/form_confirmation.html.twig
+++ b/src/AppBundle/Resources/views/donate/form_confirmation.html.twig
@@ -26,8 +26,7 @@
 
         <div class="slogan container container--90">
             <h2>
-                Dziękujemy za przesłanie formularza Na maila prześlemy wszelkie
-                informacje o odbiorze.
+                Dziękujemy za przesłanie formularza! Szczegóły dotyczące odbioru wysłaliśmy na Twój adres email.
             </h2>
         </div>
     </header>
@@ -70,5 +69,4 @@
 
     <script src="js/app.js"></script>
     </body>
-{% endblock %}
 {% endblock %}
