--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -8,12 +8,57 @@
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}"/>
     {% endblock %}
+    <script src="{{ asset('assets/js/app.js') }}"></script>
 </head>
-<body>
+
 
 {% block body %}
-{% endblock %}
+<body>
+<header class="header--form-page">
+    <nav class="container container--70">
+        <ul class="nav--actions">
+            <li class="logged-user">
+                Witaj Agata
+                <ul class="dropdown">
+                    <li><a href="#">Profil</a></li>
+                    <li><a href="#">Ustawienia</a></li>
+                    <li><a href="#">Moje zbiórki</a></li>
+                    <li><a href="#">Wyloguj</a></li>
+                </ul>
+            </li>
+        </ul>
 
-<script src="{{ asset('assets/js/app.js') }}"></script>
-</body>
-</html>
+        <ul>
+            <li><a href="{{ path('homepage') }}" class="btn btn--without-border active">Start</a></li>
+            <li><a href="index.html#steps" class="btn btn--without-border">O co chodzi?</a></li>
+            <li><a href="index.html#about-us" class="btn btn--without-border">O nas</a></li>
+            <li><a href="index.html#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
+            <li><a href="index.html#contact" class="btn btn--without-border">Kontakt</a></li>
+        </ul>
+    </nav>
+
+    <div class="slogan container container--90">
+        <div class="slogan--item">
+            <h1>Oddaj rzeczy, których już nie chcesz<br>
+                <span class="uppercase">potrzebującym</span></h1>
+        </div>
+        <div class="slogan--steps">
+            <div class="slogan--steps-title">Wystarczą 4 proste kroki:</div>
+            <ul class="slogan--steps-boxes">
+                <li>
+                    <div><em>1</em><span>Wybierz rzeczy</span></div>
+                </li>
+                <li>
+                    <div><em>2</em><span>Spakuj je w worki</span></div>
+                </li>
+                <li>
+                    <div><em>3</em><span>Wybierz fundację</span></div>
+                </li>
+                <li>
+                    <div><em>4</em><span>Zamów kuriera</span></div>
+                </li>
+            </ul>
+        </div>
+    </div>
+</header>
+{% endblock %}
