--- a/src/AppBundle/Resources/views/donate/form_confirmation.html.twig
+++ b/src/AppBundle/Resources/views/donate/form_confirmation.html.twig
@@ -6,7 +6,11 @@
         <nav class="container container--70">
             <ul class="nav--actions">
                 <li class="logged-user">
-                    Witaj Agata
+                    {% if app.session.get is defined %}
+                    Witaj {{ app.session.get('logname') }}!
+                    {% else %}
+                        Witaj Użytkowniku!
+                    {% endif %}
                     <ul class="dropdown">
                         <li><a href="#">Profil</a></li>
                         <li><a href="#">Moje zbiórki</a></li>
