--- a/src/AppBundle/Resources/views/home/index.html.twig
+++ b/src/AppBundle/Resources/views/home/index.html.twig
@@ -4,8 +4,8 @@
     <header class="header--main-page">
         <nav class="container container--70">
             <ul class="nav--actions">
-                <li><a href="" class="btn btn--small btn--without-border">Zaloguj</a></li>
-                <li><a href="#" class="btn btn--small btn--highlighted">Załóż konto</a></li>
+                <li><a href="{{ path('fos_user_security_login') }}" class="btn btn--small btn--without-border">Zaloguj</a></li>
+                <li><a href="{{ path('fos_user_registration_register') }}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
             </ul>
 
             <ul>
@@ -13,7 +13,7 @@
                 <li><a href="#steps" class="btn btn--without-border">O co chodzi?</a></li>
                 <li><a href="#about-us" class="btn btn--without-border">O nas</a></li>
                 <li><a href="#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
-                <li><a href="{{ path('donation_new')}}" class="btn btn--without-border">Przekaż dary</a></li>
+                <li><a href="{{ path('new')}}" class="btn btn--without-border">Przekaż dary</a></li>
                 <li><a href="#contact" class="btn btn--without-border">Kontakt</a></li>
             </ul>
         </nav>
