--- a/src/AppBundle/Resources/views/donate/test.twig.html
+++ b/src/AppBundle/Resources/views/donate/test.twig.html
@@ -2,19 +2,19 @@
     <div class="form--steps-instructions">
         <div class="form--steps-container">
             <h3>Ważne!</h3>
-            <p data-step="1" class="active">
+            <p data-step="1" class="active" id="data-step1">
                 Uzupełnij szczegóły dotyczące Twoich rzeczy. Dzięki temu będziemy
                 wiedzieć komu najlepiej je przekazać.
             </p>
-            <p data-step="2">
+            <p data-step="2" id="data-step2">
                 Uzupełnij szczegóły dotyczące Twoich rzeczy. Dzięki temu będziemy
                 wiedzieć komu najlepiej je przekazać.
             </p>
-            <p data-step="3">
+            <p data-step="3" id="data-step3">
                 Wybierz jedną, do
                 której trafi Twoja przesyłka.
             </p>
-            <p data-step="4">Podaj adres oraz termin odbioru rzeczy.</p>
+            <p data-step="4" id="data-step4">Podaj adres oraz termin odbioru rzeczy.</p>
         </div>
     </div>
     <div class="form--steps-container">
