--- a/src/AppBundle/Resources/views/login/login_content.html.twig
+++ b/src/AppBundle/Resources/views/login/login_content.html.twig
@@ -33,7 +33,7 @@
             <div class="form-group">
                 <div class="row"><input type="checkbox" id="remember_me" name="_remember_me" value="on"/>
                     <label class="h4"
-                           for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+                           for="remember_me">{{ "Zapamiętaj mnie"|trans }}</label>
                 </div>
             </div>
             <div class="form-group">
